Fix 1 px gap between <main> and <footer> (part 2)

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ blockquote cite {
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 1px;
 }
 
 footer[role="contentinfo"] {
